結果と考察

--- a/chapter6.tex
+++ b/chapter6.tex
@@ -9,7 +9,7 @@
 %\section{入力データの前処理}
 
 
-まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，b，c，d，e，f，g，h，i，j，k，l，m，n，oと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
+まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，ソースb，ソースc，ソースd，ソースe，ソースf，ソースg，ソースh，ソースi，ソースj，ソースk，ソースl，ソースm，ソースn，ソースoと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
 また，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
 以上の文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
@@ -30,7 +30,7 @@
 \section{提案システムからの出力結果}
 
 
-本節では，ユーザーが見た提案システムの出力結果について，特筆すべき点をまとめる．
+本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめる．
 
 
 まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
@@ -60,28 +60,20 @@
 \end{itemize}
 となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
 
-また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．なお，最長のテキストデータは約4300文字である．
+また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から10秒の間であった．なお，最長のテキストデータは約4300文字である．
 
 
 
-\section{ユーザーコメント}
+\section{ユーザーのコメント}
 
 
-ユーザーから，主に本システムの操作性についてコメントを得た．
+ユーザーから，主に本提案システムについてコメントを得た．
 
-まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，長い文章を入力した際に，その日
-だけの使用では終わらないことが多いため，実際開くたびに毎回同じことをさせられるのは，大変苦痛になっているというコメントを得た．
+まず，Web上から本提案システムが動作し，図\ref{fig:6_1}に示す画面が得られたというコメントを得た．
+新人治療者の発言を表す縦棒の間隔を等間隔にしたシステムバージョンもユーザーは見たが，それに比べ図\ref{fig:6_1}に示す通り縦棒同士の間隔がその間の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．
+またユーザーはレイアウトに関して，ラジオボタンがグラフの上にくるレイアウトのシステムバージョンも見たが，配置は図\ref{fig:6_2}に示すものの方が見やすいというコメントを得た．
 
-
-
-アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，自身の症状に関する記述は，愛・交友・
-仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自
-己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．
-
-
-
-また，本提案システム全体の配色面に関してさらなる視認性の向上を求めるコメントを得た．具体的には黄色と灰色は，バックの白とかぶって見えにくくなっているという点と，青色の隅付き括弧【】が黒字と判別がつきにくい
-という点である．
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，新人治療者が愛・交友・仕事のそれぞれのグループに関して可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．描画時間に対する具体的なコメントは得ていない．
 
 
 
