--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,10 +1,10 @@
-本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．第1章で述べた通り，熟練治療者から新人へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れが熟練治療者にとってすぐにわかるようになることが，本研究の目的である．
+本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．第1章で述べた通り，熟練治療者から新人へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れがすぐにわかるようになることが，本研究の目的である．
 
 %2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価を得た．本システムの目的は，熟練治療者から新人へのカウンセリング指導において，どのような質問を新人の治療者が来談者に投げかけるかによって，新人の治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが，熟練治療者にとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
 
 
 
-\section{出力結果の考察}
+\section{出力結果に対する考察}
 5.1節で述べた，データをそれぞれ本システムに入力した際の動作結果について，考察をまとめる．
 
 
@@ -24,17 +24,28 @@
   \item 模擬データおよびカウンセリングを実際に書き起こしたテキストデータを提案システムに入力した際に治療者と来談者の会話の流れの可視化に成功した．
   \item 上記の際に読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
 \end{itemize}
-という結果から，最長データで4000文字以上の会話の流れの文章を文字で読んで読解するより，ひと目で早く会話の流れを理解できると考える．
-したがって，会話の流れが熟練治療者にとってすぐにわかるようになることが，本研究の目的を達成したと考える．
+という結果から，最長データで4000文字以上の会話の流れの文章を文字で読んで読解するより，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかがひと目で早く理解できると考える．
+この会話の流れが熟練治療者にとってすぐにわかるようになることの検証については，次節で述べる．
 
 
-しかし前章で述べた通り，保存機能が求められているなど，新人の治療者指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
 
-\section{ユーザーコメントの考察}
+
+
+
+\section{ユーザーのコメントに対する考察}
 
 本節では，5.2節で得たユーザーコメントに対する考察について述べる．
 
-まず本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙な熟練治療者治療者が長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
+
+まず本システムはWeb上で動作することをユーザーからのコメントで確認できたので，筆者とユーザーとのカウンセリング内容の共有は行えたと考える．しかし，複数の熟練治療者同士のカウンセリング内容の共有を行っていないので，熟練治療者達の間で、カウンセリング内容の共有が効果的に行えるようになるかは前章からは検証できない．
+
+縦棒同士の間隔が等間隔であるグラフデザインよりも，縦棒同士の間隔の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．このコメントから，縦棒同士の間隔の来談者の発言の文字数に比例するグラフデザインは，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかがひとめですぐにわかるようになるという本システムの目的に寄与していると考える．
+
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」は引き出せるが「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，来談者自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．「愛」・「仕事」・「交友」といった「対人関係上の問題」が引き出されたかは本システムによってわかるが，「自己」・「スピリチュアル」といった「自己の問題」に関してはわからないと考える。
+
+また，描画所要時間に関するコメントは得られていない．今後描画所要時間について検証する必要があるが，コメントによる評価だけでなく，今後描画までの経過時間を出力する機能を搭載することで定量的な検証が行えると考える．
+
+本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，多忙な熟練治療者が長文テキストデータを一度に修正しきれないためにこの機能が求められていると考えられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
 
 
 %次に，本提案システムに対するコメントとして，ラジオボタンの操作性に関するコメントが多かった．
@@ -43,7 +54,7 @@
 
 %また，来談者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，治療者の質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 
-アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，来談者自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要があると考えるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
+
 
 配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーである熟練治療者がお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が挙げられる．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
 
@@ -60,14 +71,7 @@
 
 
 \subsubsection{軸の値の取り方}
-本提案システムでは，横軸は患者の全発言の文字数（縦棒同士の間隔は，患者の各発言の文字数に比例），縦軸は，患者の各発言内において，それぞれ「交友」「愛」「仕事」に属する文の数（単位：文）を表しているが，縦軸に関して，たとえば「交友」の場合
-\begin{enumerate}
-  \item 患者の各発言内において，「交友」に属する文の数（単位：文）
-  \item 患者の各発言内において，「交友」に属する文が何文あるかの割合（単位：％）
-  \item 患者の各発言内において， 「交友」に属する文における文字数の合計(単位：文字)
-  \item 患者の各発言内において，全ての文字数に対して「交友」に属する文の文字数が占める割合（単位：％）
-\end{enumerate}
-など，どのような数値を用いればより適当な判断が可能か，吟味する必要があると考える．
+本提案システムでは，横軸は患者の全発言の文字数（縦棒同士の間隔は，患者の各発言の文字数に比例），縦軸は，患者の各発言内において，それぞれ「交友」「愛」「仕事」に属する文の数（単位：文）を表しているが，縦軸・横軸に関して他にどのような数値を用いればより適当な判断が可能か，吟味する必要があると考える．
 
 
 
