--- a/chapter1.tex
+++ b/chapter1.tex
@@ -4,9 +4,9 @@
 
 このように，新人治療者は「閉じられた質問」を多く用いる傾向にあるので，熟達治療者は、新人治療者が「開かれた質問」を自由に使えるように教育したいと考えている．「対人関係上の問題」に注意を向けて引き出すということがカウンセリングの基本であるので，このように治療者の関心で来談者を誘導してしまうことはよくないとされている．そのためのチェックが可能になるものが求められている．
 
-そこで，熟練治療者が新人の治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人の治療者に対してカウンセリングに関するアドバイスがなされている．具体的には，来談者と新人の治療者とのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，熟練治療者らが読んで，議論をする，という流れである．そのため，熟練治療者達が会話の流れを文字で読むだけでは、カウンセリング内容の共有が十分に行えず、適切な方法で可視化されることが望まれていた．
+そこで，熟練治療者が新人の治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人の治療者に対してカウンセリングに関するアドバイスがなされている．具体的には，来談者と新人の治療者とのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，熟練治療者らが読んで，議論をする，という流れである．そのため，熟練治療者達が会話の流れを文字で読むだけでは、カウンセリング内容の分析が十分に行えず、適切な方法で可視化されることが望まれていた．
 
-そこで本研究では，来談者と新人の治療者との会話の流れを，時間軸に沿って可視化するWebシステムを開発した．本提案システムは熟練治療者をユーザーとして想定した．熟練治療者から新人へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．それが熟練治療者にとって，一目見てすぐにわかるようになることが，このシステムによって期待されることである．
+そこで本研究では，来談者と新人の治療者との会話の流れを，時間軸に沿って可視化するWebシステムを開発した．本提案システムは熟練治療者をユーザーとして想定した．熟練治療者から新人へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかである．それが一目見てすぐにわかるようになることが，このシステムによって期待されることである．
 
 
 
