--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,8 +1,8 @@
 \section{結論}
 
-本研究では，時間軸に沿った可視化によって，来談者と治療者の会話の流れを可視化するWebシステムを開発した．熟練治療者から新人へのカウンセリング指導において，どのような質問を新人の治療者が来談者に投げかけるかによって，新人の治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが重要である．それが熟練治療者にとってすぐにわかるようになったことが，本研究にて実現されたことである．
+本研究では，時間軸に沿った可視化によって，来談者と治療者の会話の流れを可視化するWebシステムを開発した．熟練治療者から新人へのカウンセリング指導において，どのような質問を新人の治療者が来談者に投げかけるかによって，新人の治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが重要である．それが一目見てわかるようになったことが，本システムにて実現されたことであると考える．特にこの実現について寄与するものであると筆者が考えるのは，縦棒同士の間隔が等間隔であるグラフデザインよりも，縦棒同士の間隔の来談者の発言の文字数に比例するグラフデザインである．
 
-しかし前章で述べたとおり，新人の治療者を指導する目的で本システムを実用化するには，まだまだ視覚的表現やユーザーインタラクションについて議論すべき課題が残されている．次節で今後の課題についてまとめる．
+しかし前章で述べたとおり，本システムのWeb上での描画所要時間は今後検証しなければならない．新人の治療者を指導する目的で本システムを実用化するには，まだまだ視覚的表現やユーザーインタラクションについて議論すべき課題が残されている．次節で今後の課題についてまとめる．
 
 
 %本提案システムのユーザーとして想定している熟練治療者からは「この研究が進んでいくことによって，心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
@@ -16,6 +16,8 @@
 本研究で得られたことを踏まえて，今後検討するべき課題を簡単にまとめる．
 
 \begin{itemize}
+\item 具体的な描画所要時間の検証
+\item 熟練治療者達の間でカウンセリング内容の共有が効果的に行えるようになるかの検証
 \item 会話の流れの可視化に関する，他のグラフ描画方法との比較
 \item 本提案システムの縦軸や横軸のスケールの取り方
 \item 縦棒の上に発言番号を振ること「自己」と「スピリチュアル」のグループの追加
