--- a/chapter3.tex
+++ b/chapter3.tex
@@ -96,4 +96,4 @@
 
 %もうひとつのタスクとして，新人の治療者は閉じられた質問を多く用いる傾向にあるので，新人の治療者を開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
-以上の分類法をもとに，本研究では，時間軸に沿った可視化によって，来談者と治療者の会話の流れを可視化し，治療者の発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家つまり治療者から得たコメントをもとにした，提案システムに対する要件の抽出について説明する．
+以上の分類法をもとに，本研究では，時間軸に沿った可視化によって，来談者と治療者の会話の流れを可視化し，治療者の発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムに対する要件の抽出，および設計と実装について説明する．
