--- a/chapter4.tex
+++ b/chapter4.tex
@@ -25,8 +25,7 @@
 グの中でその領域がどのように変わっていくかを分析していくと，そのカウンセ
 リングプロセスがより明確になると考えられる．時系列に沿ってカウンセリングの会話の流れを見ることで，最初にク
 ライエントの関心がどこにあったのか，それに対して治療者からの発話で
-異なった領域に話題が展開した，というような分析も可能になると考えられる．来談者側の関心に注意を向けるということがカウンセリングの基本であるため，治療者側の関心で来談者を誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，新人の治療者は閉じられた質問を多様
-するので，新人が開かれた質問を自由に使えるように熟練治療者が指導する必要がある．そのチェックも本システムによって可能になることが期待される．
+異なった領域に話題が展開した，というような分析も可能になると考えられる．来談者側の関心に注意を向けるということがカウンセリングの基本であるため，治療者側の関心で来談者を誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，新人の治療者は閉じられた質問を多用するので，新人が開かれた質問を自由に使えるように熟練治療者が指導する必要がある．そのチェックも本システムによって可能になることが期待される．
 
 
 
@@ -56,7 +55,7 @@
 
 \section{システム設計と実装}
 
-前節では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザー治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
+前節では提案システムのユーザーである熟練治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{ver160203.png}
