--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,4 +1,4 @@
-本章では前章で述べた提案システムに対するの評価について述べる．
+本章では前章で述べた提案システムに対する評価について述べる．
 
 %本システム自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントを得た．
 
@@ -9,9 +9,9 @@
 %\section{入力データの前処理}
 
 
-まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，ソースb，ソースc，ソースd，ソースe，ソースf，ソースg，ソースh，ソースi，ソースj，ソースk，ソースl，ソースm，ソースn，ソースoと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
+まず本提案システム評価で使用する入力データについて述べる．本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，ソースb，ソースc，ソースd，ソースe，ソースf，ソースg，ソースh，ソースi，ソースj，ソースk，ソースl，ソースm，ソースn，ソースoと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
 また，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
-以上の文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
+以上のテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
 
 
@@ -67,13 +67,15 @@
 \section{ユーザーのコメント}
 
 
-ユーザーから，主に本提案システムについてコメントを得た．
+ユーザーから，本提案システムについてコメントを得た．
 
 まず，Web上から本提案システムが動作し，図\ref{fig:6_1}に示す画面が得られたというコメントを得た．
 新人治療者の発言を表す縦棒の間隔を等間隔にしたシステムバージョンもユーザーは見たが，それに比べ図\ref{fig:6_1}に示す通り縦棒同士の間隔がその間の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．
 またユーザーはレイアウトに関して，ラジオボタンがグラフの上にくるレイアウトのシステムバージョンも見たが，配置は図\ref{fig:6_2}に示すものの方が見やすいというコメントを得た．
 
-アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，新人治療者が愛・交友・仕事のそれぞれのグループに関して可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．描画時間に対する具体的なコメントは得ていない．
+新人治療者が愛・交友・仕事のそれぞれのグループに関して引き出したという可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．描画時間に対する具体的なコメントは得ていない．
+
+
 
 
 
