--- a/chapter6.tex
+++ b/chapter6.tex
@@ -33,7 +33,7 @@
 本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめる．
 
 
-まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -44,7 +44,7 @@
 %\end{landscape}
  \end{figure}
 
-次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．
+次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -58,9 +58,9 @@
   \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
 \end{itemize}
-となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
+となっている．
 
-また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から10秒の間であった．なお，最長のテキストデータは約4300文字である．
+また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から10秒の間であった．
 
 
 
@@ -74,6 +74,8 @@
 またユーザーはレイアウトに関して，ラジオボタンがグラフの上にくるレイアウトのシステムバージョンも見たが，配置は図\ref{fig:6_2}に示すものの方が見やすいというコメントを得た．
 
 新人治療者が愛・交友・仕事のそれぞれのグループに関して引き出したという可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．描画時間に対する具体的なコメントは得ていない．
+
+特筆すべき問題点として，まず選択肢手動変更保存機能を求めるコメントを得た．また配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．
 
 
 
