--- a/chapter4.tex
+++ b/chapter4.tex
@@ -35,10 +35,10 @@
 
 
 来談者の発言に関する分類に関しては，1発言単位ではなく1文単位で「愛」「交友」「仕事」を分類するように変更することが求められる．
-たとえば，『うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
+たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
 それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
 らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
-うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
+うなるのは絶対に許せない！！」というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
 原文から，治療者から来談者への質問事項の分類の指標として，来談者の発言をうながして来談者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，来談者の発言の分量に応じて，それをはさむ治療者の発言の縦棒をグラフ上で変えることであると考えた．
 
 \subsubsection{治療者の発言に関する分類}
@@ -55,29 +55,29 @@
 
 \section{システム設計と実装}
 
-前節では提案システムのユーザーである熟練治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
+前節では提案システムのユーザーである熟練治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．このシステムに模擬会話データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{ver160203.png}
    \end{center}
-   \caption{提案システムの模擬データでの可視化結果}
+   \caption{提案システムの模擬会話データでの可視化結果}
    \label{fig:ver160203}
  \end{figure}本提案システムのアルゴリズムについて説明する．
 なお，本提案システムの開発言語はJavaScriptである．
-本提案システムの処理フローを図\ref{fig:shoriflow}に示す．
+本提案システムの構成を図\ref{fig:4_2}に示す．
 
  \begin{figure}
    \begin{center}
-     \includegraphics[width=\linewidth]{shoriflow.png}
+     \includegraphics[width=\linewidth]{4_2.png}
    \end{center}
-   \caption{提案システムの処理フロー}
-   \label{fig:shoriflow}
+   \caption{提案システムの構成}
+   \label{fig:4_2}
  \end{figure}
 
 %\subsubsection{形態素解析}
 
 
-まず，グラフ描画前のテキストデータ処理について述べる．このアクティビティ図を図\ref{fig:activity}に示す．
+まず，グラフ描画前のテキストデータ処理について述べる．アクティビティ図を図\ref{fig:activity}に示す．アクティビティ図とはフローチャートに似た図で，いわゆるビジネスロジックにおける手続き的な流れやプログラムの制御フローを表すUMLの図である．UMLは，主にオブジェクト指向分析や設計のための，記法の統一がはかられた（Unified）モデリング言語（Modeling Language）である．
 \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{activity.png}
@@ -87,26 +87,26 @@
 \end{figure}
 
 
-初めに，ブラウザ上で各テキストのjsonファイルを読み込んで，テキストを単語ごとに区切る形態素解析を行う．jsonファイル読み込み前の本提案システムスクリーンショットを図\ref{fig:yomikomimae2}に示す．
+初めに，ブラウザ上で各テキストの会話データを読み込んで，テキストを単語ごとに区切る形態素解析を行う．会話データ読み込み前の本提案システムスクリーンショットを図\ref{fig:yomikomimae2}に示す．
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{yomikomimae2.png}
    \end{center}
-   \caption{jsonファイル読み込み前のシステムスクリーンショット}
+   \caption{会話データ読み込み前のシステムスクリーンショット}
    \label{fig:yomikomimae2}
  \end{figure}
 形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
 
 %\subsubsection{1文や1発言の作成と分類}
-形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「来談者の発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:activity}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
+形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言単位でテーブルをつくる．「来談者の発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，発言データの文を構成する単語が指定された単語と一致する場合，この情報を図\ref{fig:4_2}の発言データ分類サブシステムに引き渡し，発言データ分類の初期設定値を計算する．
 %この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
 
 
 
-質問内容の形態は前章の要件通り5種類であり，後述する縦棒描画の色の対応を含め次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジは来談者の問題を治療者がどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+質問内容は，前章の要件通り 5 種類に分類され，後述する縦棒アイコンの色の割り当ては次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジは来談者の問題を治療者がどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
 
 
-治療者の1発言についても，来談者の発言の1文ごとの分類と同様に，分類初期選択状態の情報をつくり，select.jsに引き渡す．ここでjsonデータを入力した後の治療者の初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
+治療者の1発言についても，来談者の発言の1文ごとの分類と同様に，関連する単語をあらかじめ指定しておき，必要情報を\ref{fig:4_2}の発言データ分類サブシステムに引き渡し，発言データ分類の初期設定値を計算する．ここで会話データを入力した後の治療者の初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -119,14 +119,14 @@
 まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
 %\subsubsection{グラフ描画}
-以上がグラフ描画前のテキストデータ処理である．その後，治療者からの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフの可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．模擬データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:gamenseni}に示す．
+以上がグラフ描画前のテキストデータ処理である．その後，治療者からの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフ描画の際に，会話データを発言データ可視化サブシステムに受け渡す．このサブシステムでは，データ可視化ライブラリD3.js\cite{bostock2012d3}を使用した．模擬会話データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:4_6}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
-     \includegraphics[width=\linewidth]{gamenseni.png}
+     \includegraphics[width=\linewidth]{4_6.png}
    \end{center}
-   \caption{jsonファイル読み込み後のシステムスクリーンショット（説明付き）}
-   \label{fig:gamenseni}
+   \caption{会話データ読み込み後のシステムスクリーンショット（説明付き）}
+   \label{fig:4_6}
 %\end{landscape}
  \end{figure}
 
@@ -135,7 +135,7 @@
 横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内における来談者の発言量の累計の文字数を横軸，つまり時間軸とした．後述する治療者の質問を表現する縦棒はこの時間軸にそって出現する．治療者と来談者の発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフが来談者の発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
 縦軸は発言中の1文の数のうち，どのグループに何文入っているかという文の数を表している．
 
-%ここでjsonデータを入力した後の来談者の発言の各1文の初期分類状態の分類方法について説明する．
+%ここで会話データを入力した後の来談者の発言の各1文の初期分類状態の分類方法について説明する．
 %まず，あらかじめこちらで
 %次に，各単語群を含む来談者の発言の1文をグループ分けをしていった．
 
