--- a/chapter6.tex
+++ b/chapter6.tex
@@ -10,8 +10,8 @@
 
 
 まず本提案システム評価で使用する入力データについて述べる．本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，ソースb，ソースc，ソースd，ソースe，ソースf，ソースg，ソースh，ソースi，ソースj，ソースk，ソースl，ソースm，ソースn，ソースoと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
-また，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
-以上のテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
+また，後述する初期グラフ描画がある程度有用なものかを示すために模擬会話データを1個用意した．
+以上のテキストデータをそれぞれ会話データに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
 
 
@@ -23,7 +23,7 @@
 
 
 
-以上16個のjsonファイルをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．
+以上16個の会話データをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．
 
 
 
@@ -33,13 +33,13 @@
 本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめる．
 
 
-まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
+まず模擬会話データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
      \includegraphics[width=\linewidth]{6_1.png}
    \end{center}
-   \caption{模擬データ入力時の出力結果}
+   \caption{模擬会話データ入力時の出力結果}
    \label{fig:6_1}
 %\end{landscape}
  \end{figure}
