--- a/chapter7.tex
+++ b/chapter7.tex
@@ -9,7 +9,7 @@
 
 
 
-まず模擬データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬会話データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
 
 
 次に，ソースnを入力した際の出力結果は\ref{fig:6_2}の通りであった．
@@ -21,7 +21,7 @@
 
 また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．なお，最長のテキストデータは約4300文字である．
 \begin{itemize}
-  \item 模擬データおよびカウンセリングを実際に書き起こしたテキストデータを提案システムに入力した際に治療者と来談者の会話の流れの可視化に成功した．
+  \item 模擬会話データおよびカウンセリングを実際に書き起こしたテキストデータを提案システムに入力した際に治療者と来談者の会話の流れの可視化に成功した．
   \item 上記の際に読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
 \end{itemize}
 という結果から，最長データで4000文字以上の会話の流れの文章を文字で読んで読解するより，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかがひと目で早く理解できると考える．
@@ -37,11 +37,11 @@
 本節では，5.2節で得たユーザーコメントに対する考察について述べる．
 
 
-まず本システムはWeb上で動作することをユーザーからのコメントで確認できたので，筆者とユーザーとのカウンセリング内容の共有は行えたと考える．しかし，複数の熟練治療者同士のカウンセリング内容の共有を行っていないので，熟練治療者達の間で、カウンセリング内容の共有が効果的に行えるようになるかは前章からは検証できない．
+まず本システムはWeb上で動作することをユーザーからのコメントで確認できたので，筆者とユーザーとのカウンセリング内容の共有は行えたと考える．しかし，複数の熟練治療者同士のカウンセリング内容の共有を行っていないので，熟練治療者達の間で，カウンセリング内容の共有が効果的に行えるようになるかは前章からは検証できない．
 
 縦棒同士の間隔が等間隔であるグラフデザインよりも，縦棒同士の間隔の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．このコメントから，縦棒同士の間隔の来談者の発言の文字数に比例するグラフデザインは，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかがひとめですぐにわかるようになるという本システムの目的に寄与していると考える．
 
-アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」は引き出せるが「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，来談者自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．「愛」・「仕事」・「交友」といった「対人関係上の問題」が引き出されたかは本システムによってわかるが，「自己」・「スピリチュアル」といった「自己の問題」に関してはわからないと考える。
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」は引き出せるが「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，来談者自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．「愛」・「仕事」・「交友」といった「対人関係上の問題」が引き出されたかは本システムによってわかるが，「自己」・「スピリチュアル」といった「自己の問題」に関してはわからないと考える．
 
 また，描画所要時間に関するコメントは得られていない．今後描画所要時間について検証する必要があるが，コメントによる評価だけでなく，今後描画までの経過時間を出力する機能を搭載することで定量的な検証が行えると考える．
 
@@ -88,7 +88,7 @@
 
 
 \subsubsection{入力用フォーマット自動生成機能}
-本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーである熟練治療者にそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能を搭載する必要もあると考える．
+本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームの会話データにつくりなおしてから，本提案システムのユーザーである熟練治療者にその会話データを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなる会話データに変換する機能を搭載する必要もあると考える．
 
 
 \subsubsection{ズーム機能}
