--- a/chapter8.tex
+++ b/chapter8.tex
@@ -22,7 +22,7 @@
 \item 本提案システムの縦軸や横軸のスケールの取り方
 \item 縦棒の上に発言番号を振ること「自己」と「スピリチュアル」のグループの追加
 \item ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関しての改善
-\item ユーザー側で最初から最後まで簡単に可視化を行うために，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能の搭載
+\item ユーザー側で最初から最後まで簡単に可視化を行うために，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなる会話データに変換する機能の搭載
 \item 本システムのユーザーの治療者に，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまう問題を解決するために，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能
 \item ユーザーから見た本提案システムの視覚的表現やユーザーインタラクションについての定量的な評価
 \end{itemize}
