--- a/main.bib
+++ b/main.bib
@@ -3,7 +3,7 @@
 
 
 @book{ad2,
-	author = {H. L. Ansbacher，R. R. Ansbacher},
+	author = {H. L. Ansbacher and R. R. Ansbacher},
 	title = {THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER},
 	publisher = { Haper Row Publishers Inc, New York},
 	year = 1956
@@ -66,8 +66,8 @@
 
 @ARTICLE{itoh2010interactive,
   title={An interactive visualization framework for time-series of web graphs in a 3D environment},
-  author={I. Masahiko, T. Masashi, and K. Masaru},
-  booktitle={Information Visualisation (IV), 2010 14th International Conference, IEEE},
+  author={I. Masahiko，T. Masashi，and K. Masaru},
+  journal={Information Visualisation (IV), 2010 14th International Conference, IEEE},
   pages={54--60},
   year={2010}
 }
