--- a/chapter4.tex
+++ b/chapter4.tex
@@ -38,7 +38,7 @@
 たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
 それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
 らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
-うなるのは絶対に許せない！！」というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
+うなるのは絶対に許せない」という文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
 原文から，治療者から来談者への質問事項の分類の指標として，来談者の発言をうながして来談者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，来談者の発言の分量に応じて，それをはさむ治療者の発言の縦棒をグラフ上で変えることであると考えた．
 
 \subsubsection{治療者の発言に関する分類}
