delete fig6_1 Kuromoji(Java) refer

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -25,7 +25,7 @@
 グの中でその領域がどのように変わっていくかを分析していくと，そのカウンセ
 リングプロセスがより明確になると考えられる．時系列に沿ってカウンセリングの会話の流れを見ることで，最初にク
 ライエントの関心がどこにあったのか，それに対して治療者からの発話で
-異なった領域に話題が展開した，というような分析も可能になると考えられる．来談者側の関心に注意を向けるということがカウンセリングの基本であるため，治療者側の関心で来談者を誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，新人の治療者は閉じられた質問を多用するので，新人が開かれた質問を自由に使えるように熟練治療者が指導する必要がある．そのチェックも本システムによって可能になることが期待される．
+異なった領域に話題が展開した，というような分析も可能になると考えられる．来談者側の関心に注意を向けるということがカウンセリングの基本であるため，治療者側の関心で来談者を誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，新人治療者は閉じられた質問を多用するので，新人治療者が開かれた質問を自由に使えるように熟練治療者が指導する必要がある．そのチェックも本システムによって可能になることが期待される．
 
 
 
@@ -95,7 +95,7 @@
    \caption{会話データ読み込み前のシステムスクリーンショット}
    \label{fig:yomikomimae2}
  \end{figure}
-形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
+形態素解析サブシステムには，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．kuromoji.jsは，Javaで実装されたオープンソースの日本語形態素解析エンジンKuromoji\cite{kuromoji}を，JavaScriptに移植したものである．
 
 %\subsubsection{1文や1発言の作成と分類}
 形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言単位でテーブルをつくる．「来談者の発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，発言データの文を構成する単語が指定された単語と一致する場合，この情報を図\ref{fig:4_2}の発言データ分類サブシステムに引き渡し，発言データ分類の初期設定値を計算する．
