--- a/main.bib
+++ b/main.bib
@@ -114,6 +114,15 @@
 }
 
 
+@ARTICLE{kuromoji,
+	author = "Atilika",
+	title = "Kuromoji morphological analyzer, \url{http://www.atilika.org}",
+	year = 2012
+}
+
+
+
+
 @ARTICLE{attrakdiff,
 	author = "M. Hassenzahl",
 	title = "Hedonic, emotional and experiential perspectives on product quality",
