--- a/chapter3.tex
+++ b/chapter3.tex
@@ -81,19 +81,19 @@
 
 
 
-%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，新人の治療者は，上記のような「対人関係上の問題」つまり「愛のタスク」・「仕事のタスク」・「交友のタスク」を，質問に対する回答として来談者から引き出すのに苦戦しているという問題がある．
+%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，新人治療者は，上記のような「対人関係上の問題」つまり「愛のタスク」・「仕事のタスク」・「交友のタスク」を，質問に対する回答として来談者から引き出すのに苦戦しているという問題がある．
 
-%そこで，熟練治療者が新人の治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人の治療者に対してカウンセリングに関するアドバイスがなされている．
-
-
+%そこで，熟練治療者が新人治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人治療者に対してカウンセリングに関するアドバイスがなされている．
 
 
 
-%%治療者の質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，来談者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかし新人の治療者は「閉じられた質問」の割合が多く，来談者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
+
+
+%%治療者の質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，来談者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかし新人治療者は「閉じられた質問」の割合が多く，来談者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
 %来談者の会話としては，内容がどのタスク領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，治療者の質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
 
 
-%もうひとつのタスクとして，新人の治療者は閉じられた質問を多く用いる傾向にあるので，新人の治療者を開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
+%もうひとつのタスクとして，新人治療者は閉じられた質問を多く用いる傾向にあるので，新人治療者を開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
 以上の分類法をもとに，本研究では，時間軸に沿った可視化によって，来談者と治療者の会話の流れを可視化し，治療者の発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムに対する要件の抽出，および設計と実装について説明する．
