--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,6 +1,6 @@
-本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．第1章で述べた通り，熟練治療者から新人へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れがすぐにわかるようになることが，本研究の目的である．
+本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．第1章で述べた通り，熟練治療者から新人治療者へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れがすぐにわかるようになることが，本研究の目的である．
 
-%2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価を得た．本システムの目的は，熟練治療者から新人へのカウンセリング指導において，どのような質問を新人の治療者が来談者に投げかけるかによって，新人の治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが，熟練治療者にとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
+%2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価を得た．本システムの目的は，熟練治療者から新人へのカウンセリング指導において，どのような質問を新人治療者が来談者に投げかけるかによって，新人治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが，熟練治療者にとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
 
 
 
@@ -9,7 +9,7 @@
 
 
 
-まず模擬会話データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬会話データを入力した際の出力結果は図\ref{fig:ver160203}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:ver160203}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
 
 
 次に，ソースnを入力した際の出力結果は\ref{fig:6_2}の通りであった．
@@ -60,7 +60,7 @@
 
 \section{問題点}
 
-新人の治療者を指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
+新人治療者を指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
 
 
 
