--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,4 +1,4 @@
-本章では，ユーザーである熟練治療者からのコメントをもとにした提案システム要件抽出，および本提案システムの概要について詳しく述べる．なお本システムでは，来談者または治療者の一発言を，話者の交代によって判断するものとする．つまり，来談者の一発言は，治療者が喋り終わって来談者が喋り始めてから，来談者が喋り終わって治療者が喋り始めるまでである．また，治療者の一発言は，来談者が喋り終わってから，あるいは治療者が話を切り出し始めてから，治療者が喋り終わって来談者が喋り始めるまでである．
+本章では，ユーザーである熟練治療者からのコメントをもとにした提案システム要件抽出，および本提案システムの設計や実装について詳しく述べる．なお本システムでは，来談者または治療者の1発言を，話者の交代によって判断するものとする．つまり，来談者の1発言は，治療者が喋り終わって来談者が喋り始めてから，来談者が喋り終わって治療者が喋り始めるまでである．また，治療者の1発言は，来談者が喋り終わってから，あるいは治療者が話を切り出し始めてから，治療者が喋り終わって来談者が喋り始めるまでである．
 
 
 
