スクショ統一

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -55,13 +55,13 @@
 
 \section{システム設計と実装}
 
-前節では提案システムのユーザーである熟練治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．このシステムに模擬会話データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
+前節では提案システムのユーザーである熟練治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．このシステムに模擬会話データを入力した際の描画結果のスクリーンショットを図\ref{fig:6_1}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
  \begin{figure}
    \begin{center}
-     \includegraphics[width=\linewidth]{ver160203.png}
+     \includegraphics[width=\linewidth]{6_1.png}
    \end{center}
    \caption{提案システムの模擬会話データでの可視化結果}
-   \label{fig:ver160203}
+   \label{fig:6_1}
  \end{figure}本提案システムのアルゴリズムについて説明する．
 なお，本提案システムの開発言語はJavaScriptである．
 本提案システムの構成を図\ref{fig:4_2}に示す．
@@ -119,19 +119,10 @@
 まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
 %\subsubsection{グラフ描画}
-以上がグラフ描画前のテキストデータ処理である．その後，治療者からの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフ描画の際に，会話データを発言データ可視化サブシステムに受け渡す．このサブシステムでは，データ可視化ライブラリD3.js\cite{bostock2012d3}を使用した．模擬会話データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:4_6}に示す．
- \begin{figure}
-%\begin{landscape}
-   \begin{center}
-     \includegraphics[width=\linewidth]{4_6.png}
-   \end{center}
-   \caption{会話データ読み込み後のシステムスクリーンショット（説明付き）}
-   \label{fig:4_6}
-%\end{landscape}
- \end{figure}
+以上がグラフ描画前のテキストデータ処理である．その後，治療者からの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフ描画の際に，会話データを発言データ可視化サブシステムに受け渡す．このサブシステムでは，データ可視化ライブラリD3.js\cite{bostock2012d3}を使用した．
 
 \subsubsection{来談者発言ビュー}
-図\ref{fig:ver160203}において，まず積み重ね折れ線グラフは来談者の1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+図\ref{fig:6_1}において，まず積み重ね折れ線グラフは来談者の1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
 横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内における来談者の発言量の累計の文字数を横軸，つまり時間軸とした．後述する治療者の質問を表現する縦棒はこの時間軸にそって出現する．治療者と来談者の発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフが来談者の発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
 縦軸は発言中の1文の数のうち，どのグループに何文入っているかという文の数を表している．
 
