--- a/chapter6.tex
+++ b/chapter6.tex
@@ -33,7 +33,7 @@
 本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめる．
 
 
-まず模擬会話データを入力した際の出力結果は図\ref{fig:ver160203}の通りであった．この動作結果は筆者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:ver160203}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
+まず模擬会話データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は筆者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
 
 
 次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
@@ -61,8 +61,8 @@
 
 ユーザーから，本提案システムについてコメントを得た．
 
-まず，Web上から本提案システムが動作し，図\ref{fig:ver160203}に示す画面が得られたというコメントを得た．
-新人治療者の発言を表す縦棒の間隔を等間隔にしたシステムバージョンもユーザーは見たが，それに比べ図\ref{fig:ver160203}に示す通り縦棒同士の間隔がその間の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．
+まず，Web上から本提案システムが動作し，図\ref{fig:6_1}に示す画面が得られたというコメントを得た．
+新人治療者の発言を表す縦棒の間隔を等間隔にしたシステムバージョンもユーザーは見たが，それに比べ図\ref{fig:6_1}に示す通り縦棒同士の間隔がその間の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．
 またユーザーはレイアウトに関して，ラジオボタンがグラフの上にくるレイアウトのシステムバージョンも見たが，配置は図\ref{fig:6_2}に示すものの方が見やすいというコメントを得た．
 
 新人治療者が愛・交友・仕事のそれぞれのグループに関して引き出したという可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．描画時間に対する具体的なコメントは得ていない．
