toyodai success table

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -33,7 +33,7 @@ KH Coderのデメリットとして，時系列に沿った可視化ができないことがあげられる．本論
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで別々に可視化した．しかし本研究では，カウンセリングにおいて治療者からどのような来談者の話題を引き出せたかという，新人治療者と来談者との発言の対応が重要になるので，来談者の発言情報と新人治療者の発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いて来談者の話題を可視化した．しかし，新人治療者と来談者の1対1の会話の流れの可視化という観点では，新人治療者からの発言内容と来談者の発言内容を組み合わせて可視化しなければならない．
+原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで別々に可視化した．しかし本研究では，カウンセリングにおいて治療者からどのような来談者の話題を引き出せたかという，新人治療者と来談者との発言の対応が重要になるので，来談者の発言情報と新人治療者の発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフや3次元螺旋構造を用いて来談者の話題を可視化した．しかし，新人治療者と来談者の1対1の会話の流れの可視化という観点では，新人治療者からの発言内容と来談者の発言内容を組み合わせて可視化しなければならない．
 
 
 Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，治療者および来談者のそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし，カウンセリングの会話の流れにおいて，治療者の質問とそれに対する来談者の回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれ治療者と来談者の発言についてグラフを並べるのは不適当だと考えた．
