--- a/chapter6.tex
+++ b/chapter6.tex
@@ -33,7 +33,22 @@
 本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめる．
 
 
-まず模擬会話データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は筆者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
+まず模擬会話データを入力した際の出力結果を図\ref{fig:6_1}に示す．また模擬会話データを入力した際の初期表示用の自動分類結果を表\ref{table:book1}に示す．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒の後のグラフの山は，この治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
+\begin{figure}
+   \begin{center}
+     \includegraphics[width=\linewidth]{6_1.png}
+   \end{center}
+   \caption{提案システムの模擬会話データでの可視化結果}
+   \label{fig:6_1}
+ \end{figure}
+
+\begin{table}
+   \caption{模擬会話データでの初期表示用自動分類結果}
+   \label{table:book1}
+   \begin{center}
+     \includegraphics[width=\linewidth]{book1.png}
+   \end{center}
+ \end{table}
 
 
 次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
