--- a/chapter6.tex
+++ b/chapter6.tex
@@ -51,8 +51,15 @@
  \end{table}
 
 
-次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
- \begin{figure}
+次に，全16個の会話データをそれぞれ本システムに入力した際，形態素解析システムを用いて分析された来談者と治療者それぞれの発言の全ての文の数，単語数，文字数を表\ref{table:book2}に示す．また特筆すべき結果として，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
+\begin{table}
+   \caption{各会話データの全ての文の数と単語数と文字数}
+   \label{table:book2}
+   \begin{center}
+     \includegraphics[width=\linewidth]{book2.png}
+   \end{center}
+ \end{table}
+\begin{figure}
 %\begin{landscape}
    \begin{center}
      \includegraphics[width=\linewidth]{6_2.png}
