特許との比較

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -57,7 +57,11 @@
 
 前節では提案システムのユーザーである熟練治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．本節ではその要件をみたした提案システムの設計と実装について説明する．
 
-まず，本提案システムのアルゴリズムについて説明する．
+まず本提案システム評価で使用する入力データについて述べる．本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，ソースb，ソースc，ソースd，ソースe，ソースf，ソースg，ソースh，ソースi，ソースj，ソースk，ソースl，ソースm，ソースn，ソースoと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
+また，後述する初期グラフ描画がある程度有用なものかを示すために模擬会話データを1個用意した．
+以上のテキストデータをそれぞれ会話データに変換した．
+
+次に，本提案システムのアルゴリズムについて説明する．
 なお，本提案システムの開発言語はJavaScriptである．
 本提案システムの構成を図\ref{fig:4_2}に示す．
 また本提案システムのユースケース図を図\ref{fig:use_case_diagram}に示す．
@@ -111,7 +115,9 @@ UMLは，主にオブジェクト指向分析や設計のための，記法の統一がはかられた（Unified）
 質問内容は，前章の要件通り 5 種類に分類され，後述する縦棒アイコンの色の割り当ては次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジは来談者の問題を治療者がどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
 
 
-治療者の1発言についても，来談者の発言の1文ごとの分類と同様に，関連する単語をあらかじめ指定しておき，必要情報を\ref{fig:4_2}の発言データ分類サブシステムに引き渡し，発言データ分類の初期設定値を計算する．ここで会話データを入力した後の治療者の初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
+治療者の1発言についても，来談者の発言の1文ごとの分類と同様に，関連する単語をあらかじめ指定しておき，必要情報を\ref{fig:4_2}の発言データ分類サブシステムに引き渡し，発言データ分類の初期設定値を計算する．
+
+ここで会話データを入力した後の治療者の初期分類状態の分類方法について説明する．富士通株式会社は質問文判定について特許\cite{tokkyo}を取得しているが，本システム要件の質問分類の「相槌」には「そうですか」というフレーズが多数分類されるため，富士通株式会社の特許技術において行われている「（ます）か」という文の終わり方だけで質問判定を行うのは不適当である．本システムにおける，会話データを入力した後の治療者の初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
