--- a/main.bib
+++ b/main.bib
@@ -132,3 +132,10 @@
         pages = "266-272"
 }
 
+
+@ARTICLE{tokkyo,
+	author = "富士通株式会社",
+	title = "受信メール分類装置、受信メール分類プログラム及び受信メール分類方法",
+	journal = "特開2013-105226",
+	year = "2013.5.30"
+}
