--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,29 +1,4 @@
-本章では前章で述べた提案システムに対する評価について述べる．
-
-%本システム自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントを得た．
-
-%またプロトタイプから前章の提案システムへの変更についても概ね好評価を得た．
-
-
-
-%\section{入力データの前処理}
-
-
-まず本提案システム評価で使用する入力データについて述べる．本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，ソースb，ソースc，ソースd，ソースe，ソースf，ソースg，ソースh，ソースi，ソースj，ソースk，ソースl，ソースm，ソースn，ソースoと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
-また，後述する初期グラフ描画がある程度有用なものかを示すために模擬会話データを1個用意した．
-以上のテキストデータをそれぞれ会話データに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
-
-
-
-
-
-
-
-
-
-
-
-以上16個の会話データをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．
+本章では前章で述べた提案システムに対する評価について述べる．本システム評価では，前章で述べた16個の会話データをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．
 
 
 
@@ -33,7 +8,7 @@
 本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめる．
 
 
-まず模擬会話データを入力した際の出力結果を図\ref{fig:6_1}に示す．また模擬会話データを入力した際の初期表示用の自動分類結果を表\ref{table:book1}に示す．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒の後のグラフの山は，この治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
+まず模擬会話データを入力した際の出力結果を図\ref{fig:6_1}に示す．また模擬会話データの原文と，模擬会話データ時の初期自動分類結果を表\ref{table:book1}に示す．たとえば，図\ref{fig:6_1}の横軸30文字付近のピンクの縦棒の後のグラフの山は，この治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
 \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{6_1.png}
@@ -51,7 +26,7 @@
  \end{table}
 
 
-次に，全16個の会話データをそれぞれ本システムに入力した際，形態素解析システムを用いて分析された来談者と治療者それぞれの発言の全ての文の数，単語数，文字数を表\ref{table:book2}に示す．また特筆すべき結果として，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
+次に，全16個の会話データをそれぞれ本システムに入力した際，形態素解析システムを用いて分析された来談者と治療者それぞれの発言の全ての文の数，単語数，文字数，およびそれら3種類の値における来談者に対する治療者の値の比を表\ref{table:book2}に示す．また特筆すべき結果として，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
 \begin{table}
    \caption{各会話データの全ての文の数と単語数と文字数}
    \label{table:book2}
@@ -72,9 +47,17 @@
   \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
 \end{itemize}
-となっている．
+となっている．なお，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から10秒の間であった．
 
-また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から10秒の間であった．
+最後に，上記16個の各会話データ入力時の初期自動分類成功率を表\ref{table:book3}に示す．以上の考察は次章で述べる．
+\begin{table}
+   \caption{各会話データの初期自動分類成功率}
+   \label{table:book3}
+   \begin{center}
+     \includegraphics[width=\linewidth]{book3.png}
+   \end{center}
+ \end{table}
+
 
 
 
@@ -89,7 +72,9 @@
 
 新人治療者が愛・交友・仕事のそれぞれのグループに関して引き出したという可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．描画時間に対する具体的なコメントは得ていない．
 
-特筆すべき問題点として，まず選択肢手動変更保存機能を求めるコメントを得た．また配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．
+特筆すべき問題点として，まず選択肢手動変更保存機能を求めるコメントを得た．その理由として，入力するテキストデータが長文である場合分類を手動修正する回数も多く，多忙な熟練治療者が長文テキストデータを一度に修正しきれないためにこの機能が求めているというコメントを得た．
+
+また配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーである熟練治療者がお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．
 
 
 
