--- a/chapter7.tex
+++ b/chapter7.tex
@@ -45,7 +45,7 @@
 
 また，描画所要時間に関するコメントは得られていない．今後描画所要時間について検証する必要があるが，コメントによる評価だけでなく，今後描画までの経過時間を出力する機能を搭載することで定量的な検証が行えると考える．
 
-本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，多忙な熟練治療者が長文テキストデータを一度に修正しきれないためにこの機能が求められていると考えられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
+本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，多忙な熟練治療者が長文テキストデータを一度に修正しきれないためにこの機能が求めているというコメントを得た．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
 
 
 %次に，本提案システムに対するコメントとして，ラジオボタンの操作性に関するコメントが多かった．
@@ -56,7 +56,7 @@
 
 
 
-配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーである熟練治療者がお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が挙げられる．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
+配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーである熟練治療者がお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
 
 \section{問題点}
 
