--- a/chapter4.tex
+++ b/chapter4.tex
@@ -117,8 +117,10 @@ UMLは，主にオブジェクト指向分析や設計のための，記法の統一がはかられた（Unified）
 
 治療者の1発言についても，来談者の発言の1文ごとの分類と同様に，関連する単語をあらかじめ指定しておき，必要情報を\ref{fig:4_2}の発言データ分類サブシステムに引き渡し，発言データ分類の初期設定値を計算する．
 
-ここで会話データを入力した後の治療者の初期分類状態の分類方法について説明する．富士通株式会社は質問文判定について特許\cite{tokkyo}を取得しているが，本システム要件の質問分類の「相槌」には「そうですか」というフレーズが多数分類されるため，富士通株式会社の特許技術において行われている「（ます）か」という文の終わり方だけで質問判定を行うのは不適当である．本システムにおける，会話データを入力した後の治療者の初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
- \begin{figure}
+ここで会話データを入力した後の治療者の初期分類状態の分類方法について説明する．今回の実際の会話データ15個のうち，治療者の発言数は398発言あったが，本システム要件の質問分類の「相槌」に含まれるべき短文に「そうですか」というフレーズが41箇所あった．富士通株式会社は質問文判定について特許\cite{tokkyo}を取得しているが，富士通株式会社の特許技術において行われている「（ます）か」という文の終わり方だけで質問判定を行うだけでは，「そうですか」というフレーズも自動的に「相槌」ではなく「閉じられた質問」に分類してしまうので不適当である．
+
+本システムにおける，会話データを入力した後の治療者の初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
+\begin{figure}
 %\begin{landscape}
    \begin{center}
      \includegraphics[width=\linewidth]{5_2.png}
