--- a/chapter6.tex
+++ b/chapter6.tex
@@ -74,7 +74,7 @@
 
 特筆すべき問題点として，まず選択肢手動変更保存機能を求めるコメントを得た．その理由として，入力するテキストデータが長文である場合分類を手動修正する回数も多く，多忙な熟練治療者が長文テキストデータを一度に修正しきれないためにこの機能が求めているというコメントを得た．
 
-また配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーである熟練治療者がお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．
+また配色の問題について，原文表示機能で治療者の実際の発言内容の色分けを示す隅付き括弧の判別がつかないというコメントを得た．ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．
 
 
 
