--- a/chapter7.tex
+++ b/chapter7.tex
@@ -5,7 +5,7 @@
 
 
 \section{出力結果に対する考察}
-5.1節で述べた，データをそれぞれ本システムに入力した際の動作結果について，考察をまとめる．
+4.1節で述べた，データをそれぞれ本システムに入力した際の動作結果について，考察をまとめる．
 
 
 
@@ -34,7 +34,7 @@
 
 \section{ユーザーのコメントに対する考察}
 
-本節では，5.2節で得たユーザーコメントに対する考察について述べる．
+本節では，4.2節で得たユーザーコメントに対する考察について述べる．
 
 
 まず本システムはWeb上で動作することをユーザーからのコメントで確認できたので，筆者とユーザーとのカウンセリング内容の共有は行えたと考える．しかし，複数の熟練治療者同士のカウンセリング内容の共有を行っていないので，熟練治療者達の間で，カウンセリング内容の共有が効果的に行えるようになるかは前章からは検証できない．
@@ -56,7 +56,7 @@
 
 
 
-配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーである熟練治療者がお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
+配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
 
 \section{問題点}
 
