--- a/chapter1.tex
+++ b/chapter1.tex
@@ -10,8 +10,8 @@
 
 
 
-来談者の会話内容としては，第3章で詳しく述べるどの課題領域（仕事，交友，愛）に属するのか，治療者の質問としては，内容が「開かれた質問」なのかまたは「閉じられた質問」なのかを分類表示できることが必要である．来談者からの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考える．時系列に沿って見ると，最初に来談者の関心がどこにあったのか，それに対して治療者からの発話で異なった領域に話題が展開した，というような分析も可能になると考える．
+来談者の会話内容としては，次章で詳しく述べるどの課題領域（仕事，交友，愛）に属するのか，治療者の質問としては，内容が「開かれた質問」なのかまたは「閉じられた質問」なのかを分類表示できることが必要である．来談者からの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考える．時系列に沿って見ると，最初に来談者の関心がどこにあったのか，それに対して治療者からの発話で異なった領域に話題が展開した，というような分析も可能になると考える．
 
 
-本論文の構成は次の通りである．第1章は，本論文の序論である．第2章では，本論文の関連研究を挙げる．第3章では，提案システムの開発にあたり必要になってくるカウンセリングの基礎事項について説明する．第4章では，システムの要件を整理した後，本提案システムの設計と実装について述べる．第5章では，提案システムに対しての評価について述べる．第6章では，前章の評価と本研究の目的を照らしあわせて，本論文での考察を述べる．第7章では，本論文の結論と本研究が抱える今後の課題について述べる．
+本論文の構成は次の通りである．第1章は，本論文の序論である．第2章では，本論文の関連研究を挙げる．また，提案システムの開発にあたり必要になってくるカウンセリングの基礎事項について説明する．第3章では，システムの要件を整理した後，本提案システムの設計と実装について述べる．第4章では，提案システムに対しての評価について述べる．第5章では，前章の評価と本研究の目的を照らしあわせて，本論文での考察を述べる．第6章では，本論文の結論と本研究が抱える今後の課題について述べる．
 　
