--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,8 +1,26 @@
 本章では，関連する先行研究と本研究との位置づけについて述べる．
 
+
+
+
+
+
+
+
+
+%\subsection{自己組織化マップ}
+
+%自己組織化マップ機能によるカウンセリングテキストデータの単語クラスタリングに基づき，その単語のグループ分布を集計した．また，自己組織化マップに描画された単語から手動でマイナスイメージまたはプラスイメージの単語を選んでそれぞれグループをつくり，その単語のグループ分布を集計した．
+
+%自己組織化マップ単体の問題点としては，クラスターごとの描画色を自分で選べないこと，作成に1分半〜3分時間がかかることが挙げられる．
+
+
 \section{テキストデータ分析}
 
 
+%%% しかし，これらの文献では渦と熱輸送との関係を可視化した後，対話的かつ連続的に次の分析を行うことのできるビジュアル分析システムの開発は行われていない．
+
+%%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
 テキストデータ分析はテキスト要約や単語同士の関係の分析など，様々な目的で行われている．たとえばKH Coder\cite{kh1}は，テキスト文章型のデータを統計分析するためのフリーのソフトウェアである．アンケートの自由記述・インタビュー記録・新聞記事など，さまざまな社会調査データを分析するため，立命館大学の樋口が開発したものである．杉浦ら\cite{kango}は成人看護学概論の成長報告書にKH Coderの単語共起ネットワーク図機能を適用することで，成人看護学概論にプロジェクト学習を採用した効果を明らかにした．
 
@@ -17,23 +35,7 @@ KH Coderは改行によって段落を認識し，句点によって文を認識する．よってひと段落また
 
 KH Coderのデメリットとして，時系列に沿った可視化ができないことがあげられる．本論文では会話の流れを取り扱うので，時系列に沿った可視化が求められると考える．
 
-
-
-%\subsection{自己組織化マップ}
-
-%自己組織化マップ機能によるカウンセリングテキストデータの単語クラスタリングに基づき，その単語のグループ分布を集計した．また，自己組織化マップに描画された単語から手動でマイナスイメージまたはプラスイメージの単語を選んでそれぞれグループをつくり，その単語のグループ分布を集計した．
-
-%自己組織化マップ単体の問題点としては，クラスターごとの描画色を自分で選べないこと，作成に1分半〜3分時間がかかることが挙げられる．
-
-
-\section{時系列に沿った話題の可視化}
-
-
-%%% しかし，これらの文献では渦と熱輸送との関係を可視化した後，対話的かつ連続的に次の分析を行うことのできるビジュアル分析システムの開発は行われていない．
-
-%%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
-
-原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで別々に可視化した．しかし本研究では，カウンセリングにおいて治療者からどのような来談者の話題を引き出せたかという，新人治療者と来談者との発言の対応が重要になるので，来談者の発言情報と新人治療者の発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフや3次元螺旋構造を用いて来談者の話題を可視化した．しかし，新人治療者と来談者の1対1の会話の流れの可視化という観点では，新人治療者からの発言内容と来談者の発言内容を組み合わせて可視化しなければならない．
+時系列に沿った会話の可視化ということでは，まず原田ら\cite{voistrap}はマイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで別々に可視化した．しかし本研究では，カウンセリングにおいて治療者からどのような来談者の話題を引き出せたかという，新人治療者と来談者との発言の対応が重要になるので，来談者の発言情報と新人治療者の発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフや3次元螺旋構造を用いて来談者の話題を可視化した．しかし，新人治療者と来談者の1対1の会話の流れの可視化という観点では，新人治療者からの発言内容と来談者の発言内容を組み合わせて可視化しなければならない．
 
 
 Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，治療者および来談者のそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし，カウンセリングの会話の流れにおいて，治療者の質問とそれに対する来談者の回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれ治療者と来談者の発言についてグラフを並べるのは不適当だと考えた．
@@ -59,8 +61,112 @@ Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非
 
 
 
-伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本論文において，4.1節や5.2節で後述する通り来談者の発言に関する情報は時系列・文のグループ・文の数の3次元データ，治療者の発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分会話の流れを可視化できると考えた．
+伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本論文において，後述の通り来談者の発言に関する情報は時系列・文のグループ・文の数の3次元データ，治療者の発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分会話の流れを可視化できると考えた．
 
 
 
-本提案システムとして，治療者からの質問形態と，来談者の発言の各1文のグループの時間経過に沿った分布変化を可視化した．なお，来談者の発言の各1文のグループの分け方は，本提案システムの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来する分け方を取り入れた．それについては次章で詳しく述べる．%単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにシステムを構成したかについて述べる．
+本提案システムとして，治療者からの質問形態と，来談者の発言の各1文のグループの時間経過に沿った分布変化を可視化した．なお，来談者の発言の各1文のグループの分け方は，本提案システムの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来する分け方を取り入れた．それについては次節で詳しく述べる．%単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにシステムを構成したかについて述べる．
+
+
+
+
+\section{カウンセリングの基礎事項}
+
+本節では，システム開発にあたり必要となるカウンセリングの基礎事項について説明する．心理療法では，単一ですべてに
+通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案システムの使用データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．
+
+アドラー心理学は認知行動
+療法の先駆け的存在とされている．行っていることは認知の修正で，同じようなアプローチがとられている．
+アドラー心理学はオーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し，その後継者たちが発展させた心理学の理論，思想と治療技法の体系である\cite{zokad}．17世紀にルネ・デカルトが端を発して以来，1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された．ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず，人間の行動や発話の総体――をその主題とする，自然科学の一部門」と述べて以来，アメリカで行動主義が心理学の有力手法となった一方で，実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった．フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは，後にフロイトの考えに異を唱えた．%カール・ユングが唱えたのは，人間誰しも，個人的経験には一切基づいていないあるはっきりと分離された無意識の部分，つまり「集合的無意識」が存在し，「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった．
+
+%一方，アドラーが初めて示唆したのは，個人の心理は現時点における意識的諸力にも影響されるが，社会的領域や環境の影響も同様に見逃せないということであった．
+
+
+
+
+%世間では，「嫌われる勇気」が大ベストセラーになったおかげで，昨年から急に有名となってきましたが，マイナーな学派であった．ヨーガ療法についても同様である．
+
+
+ヴントの心理学は実験心理学で，臨床心理学とは長年相容れないものとして存在し続けてきた．現在でも，実験系の心理と臨床系の心理は，なかなかディスカッショ
+ンが進まない状態も残存している．そこに認知行動療法が出てきて，実験系と
+臨床系がかなり相乗りするようになってきたのが現代までの大まかな流れだとされている．
+
+精神分析もアドラー心理学もユング心理学も旧世代の心理学といわれているが，ア
+ドラー心理学のみは，認知療法の前の論理療法のエリスがアドラー心理学を学ん
+でおり，アドラー心理学のコンセプトをかなり取り入れた経緯がある．そこ
+から認知療法が発展してきているので，認知療法の先駆けとしてのアド
+ラー心理学があるということにされている．
+
+
+
+
+
+現在，世界保健機関（WHO）憲章前文において「健康とは，病気でないとか，弱っていないということではなく，肉体的にも，精神的にも，そして社会的にも，すべてが
+満たされた状態にあることをいいます．（日本WHO協会訳）」と書いてある通り，WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている．一方，アドラーは「人生のすべての問題は，3つの主要なタスクに分類することが出来る．つまり，交友のタスク，仕事のタスク，愛のタスクであると唱えた\cite{ad2}．以上からアドラー心理学では，ライフタスクについて，来談者にとっての親疎の関係から，
+\begin{itemize}
+\item 仕事のタスク：永続しない人間関係
+\item 交友のタスク：永続するが，運命をともにしない人間関係
+\item 愛のタスク：永続し，運命をともにする人間関係
+\end{itemize}
+の3つに区別している．臨床上，人間の問題についてこのように恣意的に3つに分類することは，極めて有効であるとされている．以上の分類法をもとに，次章では本論文の提案システムに対する要件の抽出，および設計と実装について説明する．
+
+%
+
+
+
+
+
+
+
+%
+
+
+
+
+
+%理論的な特徴として，
+%\begin{itemize}
+% \item 人間を分割できない全体として把握し，理性と感情・意識と無意識などの対立を認めないこと
+% \item 客観事実よりも，客観事実に対する個人の主観的認知のシステムを重視すること
+% \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること
+%\end{itemize}
+%などが挙げられる．
+%思想的な特徴としては，
+%\begin{itemize}
+% \item 他者を支配しないで生きる決心をすること
+% \item 他者に関心を持って相手を援助しようとすること
+% \item 他者を支配しないで生きる決心をすること
+% \item 他者に関心を持って相手を援助しようとすること
+%\end{itemize}
+%などが挙げられる．
+%治療技法としては，
+%\begin{itemize}
+% \item 現実的に達成可能な治療目標の一致をとること
+% \item 来談者，つまり来談者の言うことの主として目的について推量をして，それを来談者に確認をとること
+% \item 来談者自身が自分の責任で解決しなければならないタスクと，来談者には責任がなく介入する権利がないタスクとを区別すること
+% \item 目標達成のためのさまざまなアイディアを提供すること
+%\end{itemize}
+%などが挙げられる．
+
+%アドラー心理学は，社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている．（以上，日本アドラー心理学会Webページより）
+
+%アドラー心理学に基づいた治療，または，カウンセリングでは，アドラー心理学の理論に基づいて，来談者の共同体感覚を育成する目的で，様々な技法が用いられる．そのような治療中，または，カウンセリング中に，治療者，または，治療者が，常に，意識しているのは，来談者のライフスタイルについてである．
+%アドラー心理学では，人間の問題は，すべて対人関係上の問題であると考える．したがって，アドラー心理学の治療，または，カウンセリングにおいては，来談者が抱えている問題は，対人関係上の問題であり，来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている．
+
+
+
+%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，新人治療者は，上記のような「対人関係上の問題」つまり「愛のタスク」・「仕事のタスク」・「交友のタスク」を，質問に対する回答として来談者から引き出すのに苦戦しているという問題がある．
+
+%そこで，熟練治療者が新人治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人治療者に対してカウンセリングに関するアドバイスがなされている．
+
+
+
+
+
+%%治療者の質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，来談者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかし新人治療者は「閉じられた質問」の割合が多く，来談者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
+
+%来談者の会話としては，内容がどのタスク領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，治療者の質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+
+
+%もうひとつのタスクとして，新人治療者は閉じられた質問を多く用いる傾向にあるので，新人治療者を開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
+
